<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/primario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotasActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/fotoNotas"
        android:src="@drawable/lapicero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloNotas"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/fuente_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <ImageView
        android:id="@+id/imagenNota"
        android:layout_width="200pt"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fondoNotas"
        android:src="@drawable/notas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"/>

    <EditText
        android:id="@+id/editTextNota"
        android:layout_width="210dp"
        android:layout_height="250dp"
        android:gravity="center"
        android:hint="@string/textNotas"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:fontFamily="@font/fuente_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <ImageButton
        android:id="@+id/botonMal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botonMalo"
        android:scaleType="centerInside"
        android:src="@mipmap/malo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <ImageButton
        android:id="@+id/botonRegular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botonMedio"
        android:scaleType="centerInside"
        android:src="@mipmap/medio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <ImageButton
        android:id="@+id/botonBien"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botonBueno"
        android:scaleType="centerInside"
        android:src="@mipmap/bueno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secundario"
        android:hint="@string/botonGuardar"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moodHoy"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/fuente_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"/>

    <LinearLayout
        android:id="@+id/menuInferior"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@color/secundario">

        <ImageButton
            android:id="@+id/botonEstadistica"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/botonIrAEstadistica"
            android:src="@mipmap/estadistica"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside" />


        <ImageButton
            android:id="@+id/botonPrincipal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/botonIrAPrincipal"
            android:src="@mipmap/casa"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside"/>

        <ImageButton
            android:id="@+id/botonVolver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/botonVolver"
            android:src="@mipmap/volver"
            android:backgroundTint="@color/secundario"
            android:scaleType="centerInside"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>